2008-03-28  Mukund Sivaraman  <muks@mukund.org>

	Fixes for some Sparse reported issues in app, libgimp*/

	* app/gui/gui-vtable.c: Included <gdk/gdkx.h>

	* libgimp/gimpprocview.c: author, date, copyright are pointers.

	* libgimpwidgets/gimpcolorprofilestore.c: Last argument of
	g_scanner_scope_add_symbol() is a pointer.

2008-03-28  Mukund Sivaraman  <muks@mukund.org>

	Fixes for some Sparse reported issues in app/

	* app/core/gimpdrawable-operation.c: Added prototype for
	gegl_node_add_child().

	* app/core/gimpcurve.c: Remove C99 code

	* app/tools/gimpcurvestool.c
	* app/tools/gimpperspectiveclonetool.c
	* app/vectors/gimpstroke.c: Mark functions as static.

	* app/base/siox.c: state is a pointer.

	* app/plug-in/gimppluginprocframe.c: values is a pointer.

	* app/plug-in/plug-in-rc.c: plug_in_rc_parse() returns a pointer.

	* app/plug-in/gimpinterpreterdb.c: Check program[0] for '\0'
	instead of the pointer program itself.

2008-03-28  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/png.c: Fixed a bug where a pointer to a gint
	is passed to a function which expects gsize, which can cause
	out of bounds access.

2008-03-28  Michael Natterer  <mitch@gimp.org>

	* app/gui/gui.c: #include <gdk/gdkx.h>

2008-03-28  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/guides-from-selection.scm
	* plug-ins/script-fu/scripts/guides-new-percent.scm
	* plug-ins/script-fu/scripts/guides-new.scm
	* plug-ins/script-fu/scripts/guides-remove-all.scm: use "*" as
	image type (not "") so the menu item is disabled when there is no
	image.

2008-03-28  Sven Neumann  <sven@gimp.org>

	* libgimpmath/gimpmd5.[ch]: deprecate gimp_md5_get_digest() in
	favor of GCheckSum.

	* libgimpmath/test-md5.c: undef GIMP_DISABLE_DEPRECATED.

2008-03-28  Sven Neumann  <sven@gimp.org>

	* libgimpthumb/gimpthumb-utils.c (gimp_thumb_png_name): use
	GCheckSum instead of the MD5 routine from libgimpmath.

	* gimpthumb.pc.in